# ChangeLog for gnome-extra/libgda
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.128 2009/05/31 21:12:11 eva Exp $

*libgda-4.1.0 (31 May 2009)

  31 May 2009; Gilles Dartiguelongue <eva@gentoo.org> -libgda-3.0.1.ebuild,
  +files/libgda-4.0.2-libsoup-magic.patch,
  +files/libgda-4.0.2-sandbox.patch, +libgda-4.1.0.ebuild:
  Bump to 4.1.0. Clean up old revision.

  27 Feb 2009; Jeroen Roovers <jer@gentoo.org> libgda-3.0.4.ebuild:
  Stable for HPPA (bug #258192).

  15 Feb 2009; Brent Baude <ranger@gentoo.org> libgda-3.0.4.ebuild:
  stable ppc, bug 258192

  14 Feb 2009; Raúl Porcel <armin76@gentoo.org> libgda-3.0.4.ebuild:
  ia64/sparc stable wrt #258192

  13 Feb 2009; Brent Baude <ranger@gentoo.org> libgda-3.0.4.ebuild:
  stable ppc64, bug 258192

  09 Feb 2009; Markus Meier <maekke@gentoo.org> libgda-3.0.4.ebuild:
  amd64/x86 stable, bug #258192

  09 Feb 2009; Tobias Klausmann <klausman@gentoo.org> libgda-3.0.4.ebuild:
  Stable on alpha, bug #258192

  28 Jul 2008; Arun Raghavan <ford_prefect@gentoo.org> metadata.xml:
  Add local USE flags to metadata.xml

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org> libgda-1.2.4.ebuild,
  libgda-3.0.1.ebuild, libgda-3.0.4.ebuild:
  Changed dependency for postgresql to virtual/postgresql-base

*libgda-3.0.4 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> +libgda-3.0.4.ebuild:
  bump to 3.0.4. Fix leaks and some crashing bugs.

  27 Nov 2007; Daniel Gryniewicz <dang@gentoo.org>
  -files/libgda-1.2.3-freetds_api_fixes.patch, -libgda-1.2.3.ebuild,
  libgda-3.0.1.ebuild:
  Hide firebird behind bindist; bug #200284

  10 Nov 2007; nixnut <nixnut@gentoo.org> libgda-1.2.4.ebuild:
  Stable on ppc wrt bug 197799

  08 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> libgda-1.2.4.ebuild:
  Marked stable on amd64 for bug #197799
