@@ -9,14 +9,14 @@ DIST libgda-1.2.4.tar.bz2 1087076 RMD160 83981076ac408fdd4b89f0cb97cb605d5301fcb
 DIST libgda-3.0.4.tar.bz2 2908854 RMD160 6efbf5a0f40277124dcc5464168677cc97be40e3 SHA1 50ba121e05ab1fbe95b66e8df4f54a0c6a30ef23 SHA256 3f9d75e9bc50610bf6033863b79265c7c9c702323b918caf90eb3923f971da48
 DIST libgda-4.1.0.tar.bz2 8574216 RMD160 ebfced03c7436b12f76838f52364f4060922fdf1 SHA1 2518f79ead114b49395812736cf170be8403210e SHA256 0abd9b4d9111451a6dca6732d3523a57b4a1f823f85c2c0c58e1a28a5badb563
 EBUILD libgda-1.2.4.ebuild 2302 RMD160 7e27db7c9df0e16f7e1821ba0bb82a16a762df4c SHA1 5d4b68fa9dede3279a1e349e2ee661073b73f1d4 SHA256 5270a88c5bffca53e7a8264a1de6ba60837ecd582856f99724518e57f2e292d6
-EBUILD libgda-3.0.4.ebuild 2008 RMD160 69ed809d896ee66bca21c60aa0dbbaf4765c2107 SHA1 c4e4210069a26b5cd20fe647412af24dc3931c6d SHA256 2cc7bee2d1854bbfb312d196be65daf615ad1a6c24c8b17249b577f2c2e105d8
+EBUILD libgda-3.0.4.ebuild 2008 RMD160 1c497da017dc67ee1ee1bf28f26056bd366b8135 SHA1 f325d2f9fb14b37d283264021ab51b9a1e53a613 SHA256 5ca67f542c153d2a9073fea720e671fffbe7522c16a354564d4954f4d8a40446
 EBUILD libgda-4.1.0.ebuild 2621 RMD160 49745b1ddecb3fb403c2514affb6662ebaff026a SHA1 d119fc56c888c48bf8fe55658f5bd42e2cdcf564 SHA256 bc93e293ed4be6066c4775a22886b56d8ded6063bdce4545a1fc602421343773
-MISC ChangeLog 19168 RMD160 49139a05a86bce8b837ce780c0233a8070fd2e13 SHA1 6b9fd34a5cd3ba11d868ecf061acf9a125125a3e SHA256 a2896e1a971e4eac338cbbcc6efb8d84df80e6d6c4c48f2002cf299b42284a82
+MISC ChangeLog 19269 RMD160 1cc30babc119e8a97a9a1a5d00c2e37492fb6ddd SHA1 8a5830452b7e244e82238a2516cedd4882ab1b30 SHA256 0f4244ae6753388fd997b2d6553d93a3120e81e2a667e24a145ffbd36d34e61e
 MISC metadata.xml 319 RMD160 9c87ab9b6a8b5ddac19ec4d1613e31bad795376c SHA1 2bbc7eef247354f4fe2b5cb040d9a460f8e69c75 SHA256 60c377f9bd2483a6fa51d28da8a6a64ec09b92afd68f7378d1dedf4f103e344e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoi8rAACgkQ1fmVwcYIWAZbqQCfR7KFgpC7Cuqe6a5YvI/sJWEo
-OtwAoIbgmeGOIO1AXPHI8fCUGHBGTud0
-=4Spd
+iEYEARECAAYFAkoi8zUACgkQ1fmVwcYIWAbTCQCgyYjSIO+zOD8Nu0CihEhgjTjG
+aN4An1ERgysiNvmr5bHwA6WyXfsDrPYa
+=ZEvQ
 -----END PGP SIGNATURE-----
