@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgda
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.128 2009/05/31 21:12:11 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.129 2009/05/31 21:14:23 eva Exp $
+
+  31 May 2009; Gilles Dartiguelongue <eva@gentoo.org> libgda-3.0.4.ebuild:
+  Fix typo, bug #263877.
 
 *libgda-4.1.0 (31 May 2009)
 
